<resources>
    <string name="app_name">Personal Finance Tracker App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="walletzen_logo">WalletZen Logo</string>
    <string name="budget_amount">Budget Amount</string>
    <string name="enter_budget_amount">Enter budget amount</string>
    <string name="save_budget">Save Budget</string>
    <string name="reset_budget">Reset Budget</string>
    <string name="set_monthly_budget">Set Monthly Budget</string>
    <string name="current_budget_0">Current Budget: $0</string>
    <string name="total_spent_0">Total Spent: $0</string>
    <string name="spending_overview">Spending Overview</string>
    <string name="walletzen">WalletZen</string>
    <string name="track_smart_spend_smarter">Track Smart. Spend Smarter.</string>
    <string name="your_journey_towards_mindful_money_begins_here">Your journey towards mindful money begins here.</string>
    <string name="start_your_journey">Start Your Journey ➜</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="keep_calm_and_track_your_finances_wisely">Keep calm and track your finances wisely.</string>
    <string name="success_starts_with_financial_n_mindfulness_stay_on_track">Success starts with financial\n mindfulness. Stay on track...!</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="set_daily_reminder_time">Set Daily Reminder Time</string>
    <string name="no_reminder_time_set">No reminder time set</string>
    <string name="reminder_settings">Reminder Settings</string>
    <string name="expense_entry">Expense Entry</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="enter_title">Enter title</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="expense_records">Expense Records</string>
    <string name="title">Title</string>
    <string name="category_date">Category - Date</string>
    <string name="_0_00">$0.00</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="navigation_header">Navigation header</string>
    <string name="track_save_succeed">Track. Save. Succeed.💼</string>
</resources>