<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launchbg11">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/circle_shadow"
            android:contentDescription="@string/walletzen_logo"
            android:elevation="12dp"
            android:src="@drawable/logo2" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="16dp"
            app:cardBackgroundColor="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                android:background="@drawable/gradient_card">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/walletzen"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/track_smart_spend_smarter"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#0D0D0D"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvWelcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_journey_towards_mindful_money_begins_here"
            android:textStyle="bold"
            android:textColor="#2C3E50"
            android:textSize="17sp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:background="@drawable/textview_bg"
            android:padding="12dp"/>


        <Button
            android:id="@+id/btnContinueToApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style_secondary"
            android:elevation="10dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="32dp"
            android:paddingTop="12dp"
            android:paddingRight="32dp"
            android:paddingBottom="12dp"
            android:text="@string/start_your_journey"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
